[workspace]
resolver = "2"
members = [
    "compiler/backend_cranelift",
    "compiler/backend_inkwell",
    "compiler/cli",
    "compiler/frontend",
    "compiler/fuzzer",
    "compiler/formatter",
    "compiler/formatter/fuzz",
    "compiler/language_server",
    "compiler/vm",
    "compiler/vm/fuzz", 
]

[profile.release]
# https://github.com/flamegraph-rs/flamegraph#usage-with-benchmarks
debug = true
