[workspace]
resolver = "2"
members = [
    "compiler/backend_inkwell",
    "compiler/cli",
    "compiler/frontend",
    "compiler/fuzzer",
    "compiler/formatter",
    "compiler/formatter/fuzz",
    "compiler/language_server",
    "compiler/vm",
    "compiler/vm/fuzz",
    "compiler_v3",
]

[workspace.package]
edition = "2021"
rust-version = "1.78.0"

[profile.release]
# This adds file and line number information to backtraces while only increasing
# the executable's file size from 15 MB to 76 MB (compared to around 170 MB with
# full debug information).
debug = "limited"
