[package]
name = "candy"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
im = "15.1.0"
itertools = { version = "0.10.0" }
lazy_static = "1.4.0"
linked-hash-map = "0.5.4"
lsp-types = "0.93.0"
notify = "4.0.17"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = { version = "0.1.45", features = ["i128"] }
num-traits = { version = "0.2.15", features = ["i128"] }
pad = "0.1.6"
paste = "1.0.11"
proptest = "1.0.0"
rand = "0.8.5"
regex = "1.5.5"
salsa = "0.16.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
structopt = "0.3.25"
strum = "0.24.0"
strum_macros = "0.24"
tokio = { version = "1.23.1", features = ["full"] }
tokio-util = "0.7.1"
tower-lsp = "0.17.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.2.0", features = ["registry"] }
unicode-segmentation = "1.9.0"
url = "2.2.2"
walkdir = "2.3.2"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false

# https://github.com/flamegraph-rs/flamegraph
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
