[package]
name = "candy_compiler_v3"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
derive_more = "0.99.17"
extension-trait = "1.0.1"
itertools = "0.12.0"
replace_with = "0.1.7"
rustc-hash = "2.0.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["registry"] }
unicode-segmentation = "1.9.0"
