[package]
name = "candy_compiler_v4"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "candy_v4"
path = "src/main.rs"

[dependencies]
# candy_compiler_v4_derive = { path = "../compiler_v4_derive" }
clap = { version = "4.1.8", features = ["derive"] }
derive_more = "0.99.17"
enum_dispatch = "0.3.13"
extension-trait = "1.0.1"
itertools = "0.12.0"
petgraph = "0.6.5"
replace_with = "0.1.7"
rustc-hash = "2.0.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.1", features = ["derive"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["registry"] }
unicode-segmentation = "1.9.0"
