[package]
name = "candy"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
im = "15.0.0"
itertools = { version = "0.10.0" }
lazy_static = "1.4.0"
log = "0.4.14"
lspower = "1.1.0"
nom = "7.1.0"
nom-supreme = "0.6.0"
proptest = "1.0.0"
tokio-util = "0.6.0"
simplelog = "0.10.0"
structopt = "0.3.25"
strum = "0.23.0"
strum_macros = "0.23"
tokio = { version = "1.9.0", features = ["full"] }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
