[package]
name = "candy_backend_cranelift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candy_frontend = { version = "0.1.0", path = "../frontend" }
cranelift = "0.103.0"
cranelift-module = "0.103.0"
cranelift-object = "0.103.0"
derive_more = "0.99.17"
rustc-hash = "1.1.0"
salsa = "0.16.1"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
target-lexicon = "0.12.13"
