[package]
name = "candy_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[[bin]]
name = "candy"
path = "src/main.rs"

[dependencies]
candy_frontend = { path = "../frontend" }
candy_fuzzer = { path = "../fuzzer" }
candy_language_server = { path = "../language_server" }
candy_vm = { path = "../vm" }
itertools = { version = "0.10.0" }
notify = "5.1.0"
notify-debouncer-mini = { version = "0.2.1", default-features = false }
rustc-hash = "1.1.0"
salsa = "0.16.1"
structopt = "0.3.25"
tokio = { version = "1.24.2", features = ["full"] }
tower-lsp = "0.18.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["registry"] }
