[package]
name = "candy_cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
default-run = "candy"

[[bin]]
name = "candy"
path = "src/main.rs"

[features]
default = []
inkwell = ["candy_backend_inkwell"]

[dependencies]
candy_backend_inkwell = { path = "../backend_inkwell", optional = true }
candy_frontend = { path = "../frontend" }
candy_fuzzer = { path = "../fuzzer" }
candy_language_server = { path = "../language_server" }
candy_vm = { path = "../vm" }
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.4"
diffy = "0.3.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
regex = "1.9.1"
rustc-hash = "1.1.0"
salsa = "0.16.1"
tokio = { version = "1.24.2", features = ["full"] }
tower-lsp = "0.20.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["registry"] }
walkdir = "2.3.2"
