[package]
name = "candy_frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]

[dependencies]
colored = "2.0.0"
derive_more = "0.99.17"
dunce = "1.0.4"
enumset = "1.0.12"
extension-trait = "1.0.1"
im = "15.1.0"
im-rc = "15.1.0"
impl-trait-for-tuples = "0.2.2"
itertools = "0.11.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.4"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = { version = "0.1.45", features = ["i128"] }
num-traits = { version = "0.2.15", features = ["i128"] }
rustc-hash = "1.1.0"
salsa = "0.16.1"
serde = { version = "1.0.152", features = ["derive"] }
shellexpand = "3.1.0"
strum = "0.25.0"
strum_macros = "0.25.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
unicode-segmentation = "1.9.0"
url = "2.2.2"
