[package]
name = "candy_fuzzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]

[dependencies]
bitvec = "1.0.1"
candy_frontend = { path = "../frontend" }
candy_vm = { path = "../vm" }
extension-trait = "1.0.1"
itertools = "0.12.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
rustc-hash = "1.1.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
