[package]
name = "candy_language_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]

[dependencies]
async-trait = "0.1.64"
candy_frontend = { path = "../frontend" }
candy_fuzzer = { path = "../fuzzer" }
candy_vm = { path = "../vm" }
enumset = "1.0.12"
extension-trait = "1.0.1"
itertools = { version = "0.10.0" }
lazy_static = "1.4.0"
lsp-types = "0.93.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
rustc-hash = "1.1.0"
salsa = "0.16.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.80"
strum = "0.24.0"
strum_macros = "0.24"
tokio = { version = "1.24.2", features = ["full"] }
tower-lsp = "0.18.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
url = "2.3.1"
urlencoding = "2.1.2"
