[package]
name = "candy_language_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]

[features]
default = []
inkwell = ["candy_backend_inkwell"]

[dependencies]
async-trait = "0.1.64"
base64 = "0.21.2"
candy_backend_inkwell = { path = "../backend_inkwell", optional = true }
candy_formatter = { path = "../formatter" }
candy_frontend = { path = "../frontend" }
candy_fuzzer = { path = "../fuzzer" }
candy_vm = { path = "../vm" }
dap = { path = "../../third_party/dap-rs" }
derive_more = "0.99.17"
enumset = "1.0.12"
extension-trait = "1.0.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
lsp-types = "0.95.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
regex = "1.8.1"
rustc-hash = "1.1.0"
salsa = "0.16.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.80"
strum = "0.25.0"
strum_macros = "0.25.0"
tokio = { version = "1.24.2", features = ["full"] }
tower-lsp = "0.20.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
# typify = "0.0.11"
url = "2.3.1"
urlencoding = "2.1.2"
