[package]
name = "candy_vm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
bench = false

[dependencies]
candy_frontend = { path = "../frontend" }
derive_more = "0.99.17"
enum_dispatch = "0.3.11"
enumset = "1.0.12"
extension-trait = "1.0.1"
getrandom = "0.2.10"
impl-trait-for-tuples = "0.2.2"
itertools = "0.12.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = { version = "0.1.45", features = ["i128"] }
num-traits = { version = "0.2.15", features = ["i128"] }
pad = "0.1.6"
paste = "1.0.11"
rand = "0.8.5"
rustc-hash = "1.1.0"
salsa = "0.16.1"
strum = { version = "0.26.1", features = ["derive"] }
tiny_http = "0.12.0"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
unicode-segmentation = "1.9.0"
walkdir = "2.3.3"

[dev-dependencies]
criterion = "0.5.1"
criterion-cycles-per-byte = "0.5.0"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.16", features = ["registry"] }

[[bench]]
name = "benchmark"
harness = false

# https://github.com/flamegraph-rs/flamegraph
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
