[package]
name = "candy"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
fern = "0.6.1"
im = "15.1.0"
itertools = { version = "0.10.0" }
lazy_static = "1.4.0"
linked-hash-map = "0.5.4"
log = "0.4.16"
lsp-types = "0.93.0"
lspower = "1.5.0"
notify = "4.0.17"
proptest = "1.0.0"
regex = "1.5.5"
salsa = "0.16.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
structopt = "0.3.25"
strum = "0.24.0"
strum_macros = "0.24"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = "0.7.1"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
