[package]
name = "candy_vm_fuzzer"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
candy_frontend = { path = "../../frontend" }
candy_vm = { path = ".." }
lazy_static = "1.4.0"
libfuzzer-sys = "0.4"
salsa = "0.16.1"

[[bin]]
name = "vm"
path = "fuzz_targets/vm.rs"
test = false
doc = false
